tests/neg-custom-args/captures/class-contra.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/class-contra.scala:12:39 ---------------------------------
12 |  def fun(x: K{val f: T^{a}}) = x.setf(a) // error
   |                                       ^
   |                                       Found:    (a : T^{x, y})
   |                                       Required: T
   |
   | longer explanation available when compiling with `-explain`
